# pixelstruct

./: CMakeLists.txt  Makefile  ProjectHome.md  README  README.md  pixelstruct.pro
bundle/: bundle.init.out  bundle.out  bundle_001.out  bundle_004.out  bundle_006.out  bundle_008.out  out  points001.ply  points004.ply  points006.ply  points008.ply  points009.ply
cmake/: FindCGAL.cmake
pixelstruct.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
pixelstruct.xcodeproj/project.xcworkspace/xcuserdata/johndpope.xcuserdatad/: UserInterfaceState.xcuserstate
pixelstruct.xcodeproj/xcshareddata/xcschemes/: pixelstruct.xcscheme
pixelstruct.xcodeproj/xcuserdata/johndpope.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
pixelstruct.xcodeproj/xcuserdata/johndpope.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  pixelstruct.xcscheme  pixelstruct_automoc.xcscheme  xcschememanagement.plist
src/: CMakeLists.txt  bundleparser.cpp  camera.cpp  camera.h  commonplane.cpp  commonplane.h  glwidget.cpp  glwidget.h  imagelist.cpp  main.cpp  mainwindow.cpp  mainwindow.h  photo.h  plane.cpp  plane.h  point.h  triangulation.cpp  triangulation.h  visiblepoint.cpp
tags/0.1/src/: CMakeLists.txt  bundleparser.cpp  camera.cpp  glwidget.h  point.h  visiblepoint.h
tags/0.2/: CMakeLists.txt  README
tags/0.2/cmake/: FindCGAL.cmake
tags/0.2/src/: CMakeLists.txt  camera.h  commonplane.cpp  glwidget.h  plane.cpp  point.cpp  point.h  triangulation.cpp
trunk/: CMakeLists.txt  Makefile  README
trunk/cmake/: FindCGAL.cmake
trunk/src/: CMakeLists.txt  bundleparser.cpp  bundleparser.h  camera.h  commonplane.cpp  commonplane.h  glwidget.cpp  glwidget.h  imagelist.cpp  imagelist.h  main.cpp  mainwindow.cpp  mainwindow.h  photo.cpp  photo.h  plane.cpp  plane.h  point.cpp  point.h  triangulation.cpp  triangulation.h  visiblepoint.cpp  visiblepoint.h
